# tailorised-ai-cv

./: .gitignore  JD.txt  README.md  SETUP_TEMPLATE.md  cv.md  main.py  pyproject.toml
